--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -363,4 +363,8 @@
 }
 
 
-
+@media (max-width: 1199px) {
+    .avoid-menu-overlapping {
+        display:none;
+    }
+}
